--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "muse-ui": "^2.0.0-rc.5",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0"
   },
