--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.3.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
