--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "muse-ui": "2.0.0-rc.5",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
-    "vue-resource": "^1.2.1"
+    "vue-resource": "^1.2.1",
+    "vuex": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
