--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
     "vue-resource": "^1.2.1",
-    "vuex": "^2.3.0"
+    "vuex": "^2.3.0",
+    "jquery": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
